--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<canvas id="canvas1" width="70" height="300"></canvas>
 	<canvas id="canvas2" width="70" height="300"></canvas>
 	<canvas id="canvas3" width="70" height="300"></canvas>
+	<canvas id="canvas4" width="70" height="300"></canvas>
 	<div id="overlay">
 	  <div id="winline"></div>
 	</div>
