Made everything secure and changed the text.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
+  <script type="text/javascript" src="js/slot.js"></script>
   <meta name="interface" content="desktop" />
 
   <title>Slots</title>
 
-  <link href='http://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'/>
+  <link href='https://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'/>
   <link type="text/css" rel="stylesheet" href="css/reset.css" />
   <link type="text/css" rel="stylesheet" href="css/slot.css" />
 
@@ -19,8 +20,8 @@
   <div id="viewport">
     <div id="container">
       <div id="header">
-	<h1>Slots Machine</h1>
-	<h3>Play and Win</h3>
+	<h1 style="color:black">HAN</h1>
+	<h3>verdienmodellengenerator</h3>
       </div>
       <div id="reels">
 	<canvas id="canvas1" width="70" height="300"></canvas>
@@ -41,10 +42,10 @@
 	<div id="play" class="button button-default">Play</div>	  
       </div>
     </div>
-    <input id="debug" type="button" value="Toggle Reels"/>
+    <!--input id="debug" type="button" value="Toggle Reels"/!-->
   </div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
-  <script type="text/javascript" src="js/slot.js"></script>
+  
+  
   <script type="text/javascript">$(function() { SlotGame(); });</script>
 </body>
 </html>
